Re VIV-483: Fix z-index of actions menu

--- a/core/src/zeit/cms/browser/resources/cms.css
+++ b/core/src/zeit/cms/browser/resources/cms.css
@@ -606,7 +606,7 @@ pre {
   display: block;
   opacity: 1;
   position: absolute;
-  z-index: 1000;
+  z-index: 1;
   background-color: #FFF;
   border: 1px solid #c7c7c7;
   top: 2.8em;
